Fixed spacing between projects and edited the paralax home function values

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -42,11 +42,15 @@ small {
 }
 
 .project-back-button {
-  padding: 2rem 0 4rem;
+  padding-bottom: 4rem;
 }
 
 .project-overlay-visit {
   font-size: 20px;
+}
+
+.project-overlay-image {
+  padding-bottom: 2rem;
 }
 
 .project-overlay {
@@ -71,12 +75,16 @@ small {
 }
 
 @media only screen and (min-width: 50rem) {
+  .project-overlay-image {
+    padding-bottom: 0;
+  }
+
   .project {
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(4, auto);
     gap: 0 1rem;
-    padding: 2rem 2rem;
+    padding: 0 2rem 8rem;
   }
 
   .project-title {
@@ -195,7 +203,7 @@ small {
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: repeat(4, auto);
     gap: 0 1rem;
-    padding: 2rem 2rem;
+    padding: 0 2rem 8rem;
   }
 
   .project-title {
